Add encryption feature for log file